[package]
name = "btc-price"
version = "0.1.0"
edition = "2021"
author = "Tobin C. Harding <me@tobin.cc>"
description = "Get the BTC price."

[dependencies]
num-format = "0.4"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
